# imdbinfo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.txt  Dockerfile  LICENSE  MANIFEST.in  PLUGIN_IMPLEMENTATION_SUMMARY.md  README.md  example_waf_run.py  imdb_graphql.json  pyproject.toml  search_title_.json  title_tt33501878_releaseinfo.json
.github/: FUNDING.yml
.github/workflows/: build_release_manual.yml  create-release.yml  pr-test.yml  push-test.yml  pypi-publish.yml
docs/: PLUGINS.md  index.md
examples/: all_usage_example.py  grab_infos_by_url.py  title_tt0111161_reference.json  title_tt0133093_locations.json  title_tt0133093_parentalguide.json  title_tt0133093_releaseinfo.json  title_tt0133093_soundtrack.json  title_tt0133093_technical.json  title_tt1520211_episodes.json  title_tt1520211_reference.json  title_tt1628065_soundtrack.json  usage_example.py  usage_example_akas.py  usage_example_all_episodes.py  usage_example_custom_user_agent.py  usage_example_episodes.py  usage_example_filmography.py  usage_example_galleries.py  usage_example_person_detail.py  usage_example_plugins.py  usage_example_season_episodes.py  usage_example_set_locale.py  usage_example_ssl_config.py  usage_example_waf_run.py  usage_genres_interests_example.py
imdbinfo/: __init__.py  aws.py  config.py  example_plugins.py  exceptions.py  hooks.py  locale.py  models.py  parsers.py  piculet.py  plugin_manager.py  proxy.py  services.py  transformers.py
imdbinfo/specs/: title_reference.json
sample_json/: sample_person.json  sample_response.json  sample_search.json
sample_json_source/: sample_resource.json  sample_response.json
tests/: __init__.py  conftest.py  test_awards.py  test_field_defaults.py  test_functions.py  test_imdb_info_service.py  test_locale.py  test_models.py  test_parsers.py  test_plugin_integration.py  test_plugins.py  test_proxy.py  test_search.py  test_services.py  test_ssl_config.py  test_typeddict.py  test_user_agent.py  test_waf_cookie_cache.py
tests/sample_json_source/: sample_episode.json  sample_episodes.json  sample_media_gallery.json  sample_person.json  sample_resource.json  sample_search.json  sample_series.json
