[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "imdbinfo"
version = "0.3.3"
description = "A Python service for querying IMDb data"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "@tveronesi", email = "you@example.com" }
]
dependencies = [
    "requests",
    "lxml",
    "pydantic",
    "jmespath"
]

keywords = [
    "imdb",
    "movie",
    "information",
    "data"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

]

[tool.setuptools]
packages = ["imdbinfo"]

[tool.setuptools.package-data]
"sample_json_source" = ["*"]
