[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "imdbinfo"
version = "0.6.4"
description = "A Python service for querying IMDb data"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "@tveronesi", email = "tveronesi+imdbinfo@gmail.com" }
]
dependencies = [
    "niquests",
    "lxml",
    "pydantic",
    "jmespath",
    "deprecated"
]


urls = { Homepage = "https://tveronesi.github.io/imdbinfo/" }

keywords = [
    "imdb",
    "movie",
    "information",
    "data"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
[project.optional-dependencies]

dev = [
    "pytest>=7.0",
    "mypy",
    "ruff",
    "black",
]

build = [
    "build",
    "twine",
]

test = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["imdbinfo"]

[tool.setuptools.package-data]
"sample_json_source" = ["*"]
